<resources>
    <string name="app_name">Metaler</string>

    <!-- ActivityLogin -->
    <string name="NO_KAKAO_LOGIN_RESULT">카카오 로그인 응답값이 없습니다</string>
    <string name="SESSION_CLOSED">세션이 닫혔습니다. 다시 시도해주세요 : </string>
    <string name="INTERNET_DISCONNECTED_LOGIN_ERROR">로그인 도중 오류가 발생했습니다. 인터넷 연결을 확인해주세요 : </string>
    <string name="SIGN_UP">you_can_join</string>
    <string name="LOGIN">you_can_login</string>
    <string name="MEMBERSHIP_CHECK_ERROR">회원가입 여부 확인 실패 : </string>
    <string name="LOGIN_ERROR">로그인 실패 : </string>

    <!--  titleBarCard,tabBarCard 에서 쓰이는 문자열  -->
    <string name="home">홈</string>
    <string name="materials">재료</string>
    <string name="manufactures">가공</string>
    <string name="bookmark">북마크</string>
    <string name="my_page">마이페이지</string>


    <!--  activity_terms_agree에서 쓰이는 문자열  -->
    <string name="terms_title">메탈러 이용약관</string>
    <string name="terms_guide">메탈러 서비스를 이용하시려면\n아래의 이용약관에 동의해주세요.</string>
    <string name="all_agree">모두 동의합니다.</string>
    <string name="first_agree">[필수] 메탈러 서비스 이용약관</string>
    <string name="second_agree">[필수] 개인정보 수집 및 이용약관</string>
    <string name="third_agree">[선택] 프로필 정보 추가 수집 동의</string>
    <string name="fourth_agree">[선택] 광고성 정보 수신 동의</string>
    <string name="terms_more"><u>보기</u></string>
    <string name="essential_terms_guide">메탈러 서비스 이용을 위해서 필수 이용약관 동의가 필요합니다.</string>

    <!--  activity_job_input.xml에서 쓰이는 문자열  -->
    <string name="job_title">소속 입력</string>
    <string name="job_guide">소속을 입력해주세요.</string>
    <string name="job_first_category">대분류</string>
    <string name="student">대학생</string>
    <string name="expert">전문가</string>
    <string name="nothing">무소속</string>
    <string name="university_name">학교 입력</string>
    <string name="university_name_guide">소속 학교 이름을 입력해주세요.</string>
    <string name="major_name">전공 입력</string>
    <string name="major_name_guide">전공을 입력해주세요.</string>
    <string name="job_type">업무 형태</string>
    <string name="company">회사</string>
    <string name="shop_owner">창업</string>
    <string name="freelancer">프리랜서</string>
    <string name="company_name">회사명 입력</string>
    <string name="company_name_guide">회사 이름을 입력해주세요.</string>
    <string name="owner_shop_name">가게명 입력</string>
    <string name="owner_shop_name_guide">가게 이름을 입력해주세요.</string>
    <string name="job_input_alert">알림</string>
    <string name="job_input_guide">소속 입력을 완료해주세요</string>
    <string name="job_input_complete">Metaler 의 회원이 되신 것을 환영합니다!</string>

    <string name="invalid_kakao_user_info">카카오 로그인 유저 정보에 문제가 있습니다.</string>

    <string name="kakao_start">카카오톡으로 로그인</string>
    <string name="kakao_start_guide">서비스를 이용하기 위해서 로그인이 필요합니다.</string>


    <!--  activity_post_first.xml에서 쓰이는 문자열  -->
    <string name="next">다음</string>
    <string name="category">카테고리</string>
    <string name="title">제목</string>
    <string name="title_guide">제목을 입력해주세요.</string>
    <string name="post_price_guide">가격을 입력해주세요.</string>
    <string name="post_price">가격</string>
    <string name="price_type">지불방식</string>
    <string name="card_type">카드</string>
    <string name="cash_type">현금</string>
    <string name="add_img">추가한 이미지</string>
    <string name="add_img_guide">업로드한 이미지가 없습니다.</string>
    <string name="content">내용</string>
    <string name="content_guide">내용을 입력해주세요.</string>

    <string name="complete">완료</string>
    <string name="shop_name">가게명</string>
    <string name="shop_name_guide">#가게 이름을 입력해주세요.</string>
    <string name="tag_input">태그입력</string>
    <string name="tag_input_guide">#태그를 입력해주세요.</string>

    <string name="essential_point">*필수 입력 사항</string>

    <string name="work">작업</string>
    <string name="work_guide">#작업 종류를 입력해주세요.</string>

    <!--  activity_detail.xml에서 쓰이는 문자열  -->
    <string name="tag">태그</string>
    <string name="price">구매가격</string>
    <string name="won">원</string>
    <string name="like">적당해요</string>
    <string name="dislike">비싸요</string>
    <string name="comment_guide">작성된 댓글이 없습니다. 댓글을 입력해주세요.</string>
    <string name="comment_num_guide">댓글 수</string>
    <string name="comment_input_guide">댓글을 입력해주세요.</string>
    <string name="register">등록</string>


    <!--  activity_my_page.xml에서 쓰이는 문자열  -->
    <string name="nickname_modify">별명 변경</string>
    <string name="job_modify">소속 변경</string>
    <string name="my_posts">내가 쓴 글 확인</string>
    <string name="terms">이용약관 확인</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원 탈퇴</string>

    <!--  activity_search.xml에서 쓰이는 문자열  -->
    <string name="search_guide">검색어를 입력해주세요.</string>
    <string name="search_result">검색 결과</string>
    <string name="search_unit">개</string>

    <!--  ActivityMyPage 다이얼로그에 사용되는 문자열  -->
    <string name="nickname_modify_title">별명 변경</string>
    <string name="nickname_modify_content">변경할 별명을 입력해주세요.</string>

    <string name="logout_title">로그아웃</string>
    <string name="logout_content">로그아웃 하시겠습니까?</string>
    <string name="logout_allow">로그아웃</string>

    <string name="withdrawal_title">회원 탈퇴</string>
    <string name="withdrawal_content">계정을 삭제하시겠습니까?</string>
    <string name="withdrawal_content_guide">
        계정 삭제시 지금까지 작성하신 게시물은 자동으로 삭제되지 않으며,
        탈퇴 후 30일 동안 개인정보가 유지됩니다.상기 내용에 동의하시는 경우,
        <font color='#FA6400'><b>동의합니다</b></font> 를 입력 후 탈퇴를 누르면 계정이 삭제됩니다</string>
    <string name="withdrawal_recheck_title">회원 탈퇴 확인</string>
    <string name="withdrawal_recheck_content">탈퇴할 계정의 이메일을 입력해주세요. 이메일이 일치하면 계정이 삭제됩니다.</string>
    <string name="withdrawal_allow">탈퇴</string>

    <string name="alert">알림</string>
    <string name="allow">확인</string>
    <string name="close">닫기</string>
    <string name="cancel">취소</string>

    <string name="modify">수정</string>
    <string name="delete">삭제</string>

    <!--  게시글이 없을때 사용되는 문자열  -->
    <string name="error_404">등록된 게시글이 없습니다.</string>
    <string name="bookmark_error_404">등록된 북마크가 없습니다.</string>

    <!-- string format -->
    <string name="string_with_hash_tag">&#160;#%1$s</string>
    <string name="string_with_app_version">app version %1$s</string>

</resources>
