<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".jobinput.ActivityJobInput">

    <androidx.cardview.widget.CardView
        android:id="@+id/titleBarCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp"
        app:layout_constraintDimensionRatio="1:0.11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/jobTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/job_title"
        android:textColor="@color/colorPurple"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/titleBarCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/jobGuideTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_guide"
        android:textSize="16sp"
        android:textColor="@color/colorPurple"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/jobTitleTxt"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/firstCategoryTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/job_first_category"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobGuideTxt" />

    <TextView
        android:id="@+id/nothingBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/nothing"
        android:textColor="@color/colorLightGrey"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/firstCategoryTxt"
        app:layout_constraintBottom_toBottomOf="@id/firstCategoryTxt"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/expertBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/expert"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/firstCategoryTxt"
        app:layout_constraintBottom_toBottomOf="@id/firstCategoryTxt"
        app:layout_constraintEnd_toStartOf="@id/nothingBtn"
        />
    <TextView
        android:id="@+id/studentBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/student"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/firstCategoryTxt"
        app:layout_constraintBottom_toBottomOf="@id/firstCategoryTxt"
        app:layout_constraintEnd_toStartOf="@id/expertBtn"
        />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/studentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="universityNameTxt,universityNameInput,majorNameTxt,majorNameInput"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/universityNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/university_name"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstCategoryTxt"
        />
    <EditText
        android:id="@+id/universityNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/university_name_guide"
        android:gravity="right"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/universityNameTxt"
        app:layout_constraintBottom_toBottomOf="@id/universityNameTxt"
        app:layout_constraintLeft_toRightOf="@id/universityNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/majorNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/major_name"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/universityNameTxt"
        />
    <EditText
        android:id="@+id/majorNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/major_name_guide"
        android:gravity="right"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/majorNameTxt"
        app:layout_constraintBottom_toBottomOf="@id/majorNameTxt"
        app:layout_constraintLeft_toRightOf="@id/majorNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />



    <androidx.constraintlayout.widget.Group
        android:id="@+id/expertGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="jobTypeTxt,companyBtn,shopOwnerBtn,freelancerBtn,companyGroup,shopOwnerGroup"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/jobTypeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/job_type"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstCategoryTxt" />
    <TextView
        android:id="@+id/freelancerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/freelancer"
        android:textColor="@color/colorLightGrey"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/jobTypeTxt"
        app:layout_constraintBottom_toBottomOf="@id/jobTypeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/shopOwnerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/shop_owner"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/jobTypeTxt"
        app:layout_constraintBottom_toBottomOf="@id/jobTypeTxt"
        app:layout_constraintEnd_toStartOf="@id/freelancerBtn"
        />
    <TextView
        android:id="@+id/companyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/company"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/jobTypeTxt"
        app:layout_constraintBottom_toBottomOf="@id/jobTypeTxt"
        app:layout_constraintEnd_toStartOf="@id/shopOwnerBtn"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/companyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="companyNameTxt,companyNameInput"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/companyNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/company_name"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTypeTxt"
        />
    <EditText
        android:id="@+id/companyNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/company_name_guide"
        android:gravity="right"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/companyNameTxt"
        app:layout_constraintBottom_toBottomOf="@id/companyNameTxt"
        app:layout_constraintLeft_toRightOf="@id/companyNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/shopOwnerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="shopNameTxt,shopNameInput"
        />
    <TextView
        android:id="@+id/shopNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/shop_name"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTypeTxt"
        />
    <EditText
        android:id="@+id/shopNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/shop_name_guide"
        android:gravity="right"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="@id/shopNameTxt"
        app:layout_constraintBottom_toBottomOf="@id/shopNameTxt"
        app:layout_constraintLeft_toRightOf="@id/shopNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>