<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".jobmodify.ActivityJobModify">



    <TextView
        android:id="@+id/firstCategoryTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:text="@string/job_first_category"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBarCard" />

    <TextView
        android:id="@+id/nothingBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/nothing"
        android:textColor="@color/colorLightGrey"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="@id/firstCategoryTxt"
        app:layout_constraintBottom_toBottomOf="@id/firstCategoryTxt"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/expertBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/expert"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/firstCategoryTxt"
        app:layout_constraintBottom_toBottomOf="@id/firstCategoryTxt"
        app:layout_constraintEnd_toStartOf="@id/nothingBtn"
        />
    <TextView
        android:id="@+id/studentBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/student"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/firstCategoryTxt"
        app:layout_constraintBottom_toBottomOf="@id/firstCategoryTxt"
        app:layout_constraintEnd_toStartOf="@id/expertBtn"
        />
    <View
        android:id="@+id/firstCategoryLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstCategoryTxt" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/studentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="universityNameTxt,universityNameInput,universityNameLine,majorNameTxt,majorNameInput,majorNameLine"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/universityNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/university_name"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/firstCategoryTxt"
        app:layout_constraintTop_toTopOf="@id/universityNameInput"
        app:layout_constraintBottom_toBottomOf="@id/universityNameInput"
        />
    <EditText
        android:id="@+id/universityNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/university_name_guide"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/firstCategoryLine"
        app:layout_constraintLeft_toRightOf="@id/universityNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/universityNameLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/universityNameInput" />

    <TextView
        android:id="@+id/majorNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/major_name"
        app:layout_constraintStart_toStartOf="@id/firstCategoryTxt"
        app:layout_constraintTop_toTopOf="@id/majorNameInput"
        app:layout_constraintBottom_toBottomOf="@id/majorNameInput"
        />
    <EditText
        android:id="@+id/majorNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/major_name_guide"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/universityNameLine"
        app:layout_constraintLeft_toRightOf="@id/majorNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/majorNameLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/majorNameInput" />



    <androidx.constraintlayout.widget.Group
        android:id="@+id/expertGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="jobTypeTxt,companyBtn,shopOwnerBtn,freelancerBtn,jobTypeLine,companyGroup,shopOwnerGroup"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/jobTypeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/job_type"
        android:textColor="@color/colorGrey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/firstCategoryTxt"
        app:layout_constraintTop_toBottomOf="@id/firstCategoryTxt" />
    <TextView
        android:id="@+id/freelancerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/freelancer"
        android:textColor="@color/colorLightGrey"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="@id/jobTypeTxt"
        app:layout_constraintBottom_toBottomOf="@id/jobTypeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/shopOwnerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/shop_owner"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/jobTypeTxt"
        app:layout_constraintBottom_toBottomOf="@id/jobTypeTxt"
        app:layout_constraintEnd_toStartOf="@id/freelancerBtn"
        />
    <TextView
        android:id="@+id/companyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintDimensionRatio="2.7:1"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:text="@string/company"
        android:textColor="@color/colorLightGrey"
        android:layout_marginRight="8dp"
        android:background="@drawable/job_btn_lightgrey_rounding_border"
        app:layout_constraintTop_toTopOf="@id/jobTypeTxt"
        app:layout_constraintBottom_toBottomOf="@id/jobTypeTxt"
        app:layout_constraintEnd_toStartOf="@id/shopOwnerBtn"
        />
    <View
        android:id="@+id/jobTypeLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobTypeTxt" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/companyGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="companyNameTxt,companyNameInput,companyNameLine"
        />
    <TextView
        android:id="@+id/companyNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/company_name"
        app:layout_constraintTop_toTopOf="@id/companyNameInput"
        app:layout_constraintBottom_toBottomOf="@id/companyNameInput"
        app:layout_constraintStart_toStartOf="@id/firstCategoryTxt"
        />
    <EditText
        android:id="@+id/companyNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/company_name_guide"
        android:gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/jobTypeLine"
        app:layout_constraintLeft_toRightOf="@id/companyNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/companyNameLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/companyNameInput" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/shopOwnerGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="shopNameTxt,shopNameInput"
        />
    <TextView
        android:id="@+id/shopNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorGrey"
        android:text="@string/shop_name"
        app:layout_constraintTop_toTopOf="@id/shopNameInput"
        app:layout_constraintBottom_toBottomOf="@id/shopNameInput"
        app:layout_constraintStart_toStartOf="@id/firstCategoryTxt"
        />
    <EditText
        android:id="@+id/shopNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorLightGrey"
        android:text="@string/shop_name_guide"
        android:gravity="right"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/jobTypeLine"
        app:layout_constraintLeft_toRightOf="@id/shopNameTxt"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/shopNameLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopNameInput" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleBarCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="4dp"
            app:layout_constraintDimensionRatio="1:0.11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:id="@+id/currentTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_modify"
                    android:textColor="@color/colorPurple"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:src="@drawable/ic_nav_back_x3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/completeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete"
                    android:textColor="@color/colorPurple"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>